# localVoice

./: .gitignore  BUILD_GUIDE.md  LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/localvoice/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/example/localvoice/: LocalVoiceApp.kt  MainActivity.kt
app/src/main/java/com/example/localvoice/audio/: RecordingService.kt  WavWriter.kt
app/src/main/java/com/example/localvoice/cleanup/: CleanupWorker.kt
app/src/main/java/com/example/localvoice/data/: AppContainer.kt  ModelManager.kt  RecordingRepository.kt
app/src/main/java/com/example/localvoice/data/db/: AppDatabase.kt  Cleanup.kt  CleanupDao.kt  Recording.kt  RecordingDao.kt  Transcript.kt  TranscriptDao.kt
app/src/main/java/com/example/localvoice/ime/: LocalVoiceImeService.kt
app/src/main/java/com/example/localvoice/llm/: ChatTemplate.kt  LlamaContext.kt
app/src/main/java/com/example/localvoice/transcribe/: TranscribeWorker.kt
app/src/main/java/com/example/localvoice/ui/: MainScreen.kt  MainViewModel.kt  Player.kt
app/src/main/java/com/example/localvoice/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/localvoice/whisper/: WavReader.kt  WhisperContext.kt
app/src/main/res/drawable/: bg_ime_mic_active.xml  bg_ime_mic_idle.xml  ic_localvoice_mic.xml
app/src/main/res/layout/: ime_view.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: method.xml
app/src/test/java/com/example/localvoice/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
llmnative/: build.gradle.kts
llmnative/src/main/cpp/: CMakeLists.txt  llm_jni.cpp
